updated whole project to java 12